@@ -1,11 +1,30 @@
 # The testing matrix considers ruby/puppet versions supported by SIMP and PE:
+#
+# https://puppet.com/docs/pe/2018.1/component_versions_in_recent_pe_releases.html
+# https://puppet.com/misc/puppet-enterprise-lifecycle
+# https://puppet.com/docs/pe/2018.1/overview/getting_support_for_pe.html
 # ------------------------------------------------------------------------------
-#  release    pup   ruby      eol
-# PE 2017.2   4.10  2.1.9  TBD
+# Release       Puppet   Ruby   EOL
+# SIMP 6.2      4.10     2.1.9  TBD
+# PE 2016.4     4.10     2.1.9  2018-12-31 (LTS)
+# PE 2017.3     5.3      2.4.4  2018-12-31
+# SIMP 6.3      5.5      2.4.4  TBD***
+# PE 2018.1     5.5      2.4.4  2020-05 (LTS)***
+# PE 2019.0     6.0      2.5.1  2019-08-31^^^
+#
+# *** = Modules created for SIMP 6.3+ are not required to support Puppet < 5.5
+# ^^^ = SIMP doesn't support 6 yet; tests are info-only and allowed to fail
+
 ---
 language: ruby
 cache: bundler
 sudo: false
+
+stages:
+  - check
+  - spec
+  - name: deploy
+    if: 'fork = false AND tag = true'
 
 bundler_args: --without development system_tests --path .vendor
 
@@ -20,43 +39,65 @@ addons:
 before_install:
   - rm -f Gemfile.lock
 
+global:
+  - STRICT_VARIABLES=yes
+
 jobs:
   allow_failures:
-      # TODO fail on puppet 5 for now until
-      # https://github.com/rodjek/rspec-puppet/issues/647 is resolved
-    - stage: spec
-      rvm: 2.4.1
-      env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 5.0"
+    - name: 'Latest Puppet 6.x (allowed to fail)'
 
   include:
-    - stage: spec
-      rvm: 2.4.1
-      env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 5"
+    - stage: check
+      name: 'Syntax, style, and validation checks'
+      rvm: 2.4.4
+      env: PUPPET_VERSION="~> 5.5"
       script:
         - bundle exec rake check:dot_underscore
         - bundle exec rake check:test_file
         - bundle exec rake pkg:check_version
-        - bundle exec rake lint
         - bundle exec rake metadata_lint
         - bundle exec rake pkg:compare_latest_tag
         - bundle exec rake pkg:create_tag_changelog
+        - bundle exec rake lint
         - bundle exec puppet module build
 
     - stage: spec
-      rvm: 2.4.1
-      env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 5.0"
+      name: 'Puppet 4.10 (SIMP 6.2, PE 2016.4)'
+      rvm: 2.1.9
+      env: PUPPET_VERSION="~> 4.10.0"
       script:
         - bundle exec rake spec
 
     - stage: spec
-      rvm: 2.1.9
-      env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 4.10.0"
+      name: 'Puppet 5.3 (PE 2017.3)'
+      rvm: 2.4.4
+      env: PUPPET_VERSION="~> 5.3.0"
       script:
         - bundle exec rake spec
 
-    # This needs to be last since we have an acceptance test
+    - stage: spec
+      rvm: 2.4.4
+      name: 'Puppet 5.5 (SIMP 6.3, PE 2018.1)'
+      env: PUPPET_VERSION="~> 5.5.0"
+      script:
+        - bundle exec rake spec
+
+    - stage: spec
+      name: 'Latest Puppet 5.x'
+      rvm: 2.4.4
+      env: PUPPET_VERSION="~> 5.0"
+      script:
+        - bundle exec rake spec
+
+    - stage: spec
+      name: 'Latest Puppet 6.x (allowed to fail)'
+      rvm: 2.5.1
+      env: PUPPET_VERSION="~> 6.0"
+      script:
+        - bundle exec rake spec
+
     - stage: deploy
-      rvm: 2.4.1
+      rvm: 2.4.4
       script:
         - true
       before_deploy:
@@ -76,5 +117,4 @@ jobs:
             secure: "Spfh3CdMXqsDKlYXBHWcihPdmGG4+sJ/gVCoZ6Z2B/C2CpHC8WzwxaniVClznwI8iHYY2mZUr1BKkBIMmo2xOdJDrQ0VSecCmV912ofEvAumvy9hUR0b39Lgj6WtvZQ0ppXVX0PXbtFiJMM6Ht8vc4A8G0fVJg89qII1M372WO0rbFKpJ+Qh9xg89Z8nWUntnaoO0gl35krGjSqjZQgUuk5NZnrkVcFt+bvV2ND4QL2HZpPuwiCPets2tTa0vBR6dU74r/o+g35uz49SvULF5l1MdveDp/lZwnDiAuJ37tKhDfMZWPXvPALpix4W3r77YiaTECoRRYNFMRBJvyfL11JfsFdk4bS6/v/raJ6I89eB06oPppDohnUgPNVwBcQu2Tm3YZttW6xC92fPysZKoM9xPzq8/YBkKJ9ac1WGTcLhD7nj0mwscns+qM4PdA/ipPuqatQ4SsjxXlLUxFZ0ScwI9VR5uZOSfxLAwzVUsiaY+g/pKljA/ssXOccfUX7v1MYiD/nbT6Blj7CDsgXJf30QFeT8K/QM65tu3Vtov+VzbJUGJ1rHYz/qNyKMWgFyX/GddcH6WE8yxzQFYdQJzGbF7Ak2QM/LQ1xpIg37kfg/t525uUeucLe5jdAVdo/qFTp3UfFMzhnD7MjdSTDXuGvkPYS3m1qavEM3ICP7eqQ="
           on:
             tags: true
-            rvm: 2.4.1
             condition: '($SKIP_FORGE_PUBLISH != true)'
